<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_recording"
        android:icon="@drawable/bottom_nav_icon_recording"
        android:title="@string/nav_recording" />
    <item
        android:id="@+id/nav_earnings"
        android:icon="@drawable/bottom_nav_icon_earnings"
        android:title="@string/nav_earnings" />
    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/bottom_nav_icon_data"
        android:title="@string/nav_data" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/bottom_nav_icon_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/bottom_nav_icon_search"
        android:title="@string/nav_search" />
</menu>
